--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -59,8 +59,8 @@ body.dark-mode #hero {
 
 body.dark-mode #hero:before {
     content: "";
-    background-color: #000000d4;
-    backdrop-filter: blur(2px);
+    background: #000000c6;
+    backdrop-filter: blur(5px);
     position: absolute;
     bottom: 0;
     top: 0;
@@ -235,8 +235,13 @@ body.dark-mode h2 {
     color: #fff;
 }
 
+body.dark-mode .profile-link a {
+    color: #fff;
+    padding: 1.0em;
+}
+
 body.dark-mode h2.profile-desc {
-    color: #898a77;
+    color: #a2a390;
     font-size: 20px;
     font-weight: normal;
     cursor: default;
@@ -427,7 +432,6 @@ body.dark-mode .wbnrfz-summ {
     padding-bottom: 10px;
 }
 
-/* Add a blur overlay to the wbnrfz-summ section */
 body.dark-mode .wbnrfz-summ::before {
     content: '';
     position: absolute;
@@ -435,7 +439,7 @@ body.dark-mode .wbnrfz-summ::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: #00000080;
     backdrop-filter: blur(5px);
     z-index: 1;
 }
