--- a/css/style.css
+++ b/css/style.css
@@ -768,8 +768,8 @@ header {
 
 #hero:before {
     content: "";
-    background-color: #262626e2;
-    backdrop-filter: blur(2px);
+    background-color: #f5f6f2c2;
+    backdrop-filter: blur(5px);
     position: absolute;
     bottom: 0;
     top: 0;
@@ -1602,20 +1602,21 @@ img.profile-pic {
 }
 
 .profile-name {
-    color: #fff;
+    color: #000;
     font-size: 35px;
     padding-top: 0.5em;
     cursor: default;
 }
 
 .profile-desc {
-    color: #e4e6c1;
+    color: #5e6044;
     font-size: 20px;
     font-weight: normal;
     cursor: default;
 }
 
 .profile-link a {
+    color: #000;
     padding: 1.0em;
 }
 
@@ -2294,15 +2295,7 @@ h2.page-title {
     color: #000;
 }
 
-.portfolio-sort select {
-    padding: 10px;
-    border-radius: 25px;
-    font-size: 14px;
-    background-color: #e4e6cf;
-    width: 120px;
-    height: 40px;
-    transition: all 0.3s ease;
-}
+
 
 #sort-options {
     appearance: none;
@@ -2334,6 +2327,23 @@ select:focus {
     background-color: #f5f6f2;
     padding-top: 7em;
     padding-bottom: 10px;
+}
+
+.wbnrfz-summ::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #f5f6f2a0;
+    backdrop-filter: blur(5px);
+    z-index: 1;
+}
+
+.wbnrfz-summ > * {
+    position: relative;
+    z-index: 2;
 }
 
 .wbnrfz_details {
