2025-XX Feature Update for Version Next (5.0.x)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -466,7 +466,7 @@ body.dark-mode .wbnrfz_details_body {
 }
 
 body.dark-mode .wbnrfz_eicw {
-    background: #0d0d0d;
+    background: #18191a;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     padding-top: 3em;
