--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -194,7 +194,7 @@
         inset: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.1);
+        background: #070707d4;
         backdrop-filter: blur(50px);
         z-index: -1;
     }
@@ -266,8 +266,8 @@
         left: 0;
         width: 100%;
         height: 0;
-        background: #0d0d0de0;
-        backdrop-filter: blur(50px);
+        background: #070707e2;
+        backdrop-filter: blur(50px) !important;
         box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
         overflow: hidden;
         transition: all 0.3s ease;
@@ -281,8 +281,7 @@
         left: 0;
         width: 100%;
         height: 0;
-        background: #000000;
-        backdrop-filter: blur(3em);
+        background: #070707e2;
         box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
         overflow: hidden;
         transition: all 0.3s ease;
@@ -292,6 +291,8 @@
 
     #check:checked~.navbar {
         height: 100vh;
+        background: #070707ec;
+        backdrop-filter: blur(50px) !important;
     }
 
     .nav-item {
