--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -18,6 +18,12 @@ body.dark-mode #preloader {
     background-color: #1f2022;
 }
 
+body.dark-mode #preloader-text {
+    margin-top: 20px;
+    font-size: 16px;
+    color: #fff;
+  }
+
 /* ---- Button */
 .wbnrfz_btn_theme {
     position: relative;
