--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -333,13 +333,13 @@ body.dark-mode .timeline-content:hover {
 /* ------------------------------------------ */
 
 /* ------------------------------------------ 3.0 Indiv Pages ------------------------------------------ */
-body.dark-mode .wbnrfz-summ {
+/* body.dark-mode .wbnrfz-summ {
     background-color: #181818cb;
     transition: all 0.5s ease;
     padding-top: 8em;
     padding-bottom: 10px;
     backdrop-filter: blur(10px);
-}
+} */
 
 body.dark-mode span,
 body.dark-mode .wbnrfz_details .details_catagory_wrap .single_catagory h4,
@@ -455,6 +455,23 @@ body.dark-mode .wbnrfz-summ::before {
     height: 100%;
     background: #00000080;
     backdrop-filter: blur(5px);
+    z-index: 1;
+}
+
+body.dark-mode .wbnrfz-summ-indiv {
+    background-color: #000000d4;
+    backdrop-filter: blur(2px);
+    padding-top: 8em;
+    padding-bottom: 10px;
+}
+
+body.dark-mode .wbnrfz-summ-indiv::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     z-index: 1;
 }
 
