2025-XX Feature Update for Version Next (5.0.x)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -487,6 +487,7 @@ body.dark-mode .wbnrfz_details {
     margin-top: -3.2em;
     padding-top: 3em;
     padding-bottom: 2em;
+    z-index: 1000000 !important;
 }
 
 body.dark-mode .wbnrfz_details_body {
