--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -156,7 +156,7 @@
 
     .portfolio-controls {
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         gap: 20px;
     }
 
@@ -475,8 +475,8 @@
 
     .portfolio-controls {
         display: flex;
-        flex-direction: column;
-        gap: 20px;
+        flex-direction: column-reverse;
+        /* gap: 20px; */
     }
 
     .wbnrfz_details h1 {
@@ -746,7 +746,7 @@
 
     .portfolio-controls {
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         /* Stack children vertically */
         gap: 20px;
         /* Add spacing between elements */
@@ -826,7 +826,7 @@
     .wbnrfz_details h1 {
         font-size: clamp(30px, 8.5vw, 30px) !important;
         text-align: center;
-        margin-bottom: 50px;
+        margin-bottom: 0px;
     }
 
     .wbnrfz_btn {
