--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -85,7 +85,7 @@ body.dark-mode #hero:before {
 body.dark-mode .bg-overlay::after {
     position: absolute;
     content: "";
-    height: 100%;
+    height: 101%;
     width: 100%;
     top: 0;
     left: 0;
@@ -135,7 +135,7 @@ body.dark-mode header {
     justify-content: space-between;
     align-items: center;
     z-index: 5;
-    background: #070707d4;
+    background: #070707e8;
     box-shadow: 0 4px 30px #0000001a;
     backdrop-filter: blur(5px);
     transition: all 0.5s ease;
@@ -495,6 +495,16 @@ body.dark-mode .wbnrfz_details_body {
     margin-top: -3.2em;
     padding-top: 3em;
     padding-bottom: 2em;
+}
+
+body.dark-mode .wbnrfz_details_blog {
+    background: #0d0d0de0;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    margin-top: -3.2em;
+    padding-top: 3em;
+    padding-bottom: 2em;
+    z-index: 1000000 !important;
 }
 
 body.dark-mode .wbnrfz_eicw {
