--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -74,7 +74,7 @@ body.dark-mode #hero {
 body.dark-mode #hero:before {
     content: "";
     background: #000000c6;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(2px);
     position: absolute;
     bottom: 0;
     top: 0;
@@ -454,7 +454,7 @@ body.dark-mode .wbnrfz-summ::before {
     width: 100%;
     height: 100%;
     background: #00000080;
-    backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(5px); */
     z-index: 1;
 }
 
