--- a/css/style.css
+++ b/css/style.css
@@ -725,8 +725,8 @@ header {
 
 #hero:before {
     content: "";
-    background-color: #e5e5e5b7;
-    backdrop-filter: blur(5px);
+    background-color: #f0efefbf;
+    backdrop-filter: blur(2px);
     position: absolute;
     bottom: 0;
     top: 0;
@@ -2381,8 +2381,8 @@ select:focus {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #e5e5e5b7;
-    backdrop-filter: blur(5px);
+    background-color: #ffffff83;
+    /* backdrop-filter: blur(5px); */
     z-index: 1;
 }
 
@@ -2469,6 +2469,10 @@ li.breadcrumb-item a {
     color: #000;
 }
 
+li.breadcrumb-item a:hover, li.breadcrumb-item.active a:hover {
+    color: #80a8cc !important;
+}
+
 .wbnrfz_eicw .banner-eicw img {
     width: 100%;
     border-radius: 20px;
@@ -2553,16 +2557,16 @@ h2.page-title {
     padding-left: 2em;
     padding-right: 2em;
     border-radius: 25px;
+    transition: all 0.5s ease;
 }
 
-/* Rotate the chevron when expanded */
-.collapsible-header[aria-expanded="true"] {
-    transform: rotate(180deg);
+.collapsible-header:hover {
     background-color: #80a8cc;
     padding: 1em;
     padding-left: 2em;
     padding-right: 2em;
     border-radius: 25px;
+    transition: all 0.5s ease;
 }
 
 .nav-chev {
